Add missing build line.