@@ -57,6 +57,7 @@ tasks.withType(JavaCompile) {
                              "--add-opens","java.base/java.nio=ALL-UNNAMED",
                              "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
                              "--add-opens","java.management/sun.management=ALL-UNNAMED",
+                             "--add-opens jdk.management/com.ibm.lang.management.internal=ALL-UNNAMED",
                              "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
 }
 
@@ -67,6 +68,7 @@ tasks.withType(Test) {
                  "--add-opens","java.base/java.nio=ALL-UNNAMED",
                  "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
                  "--add-opens","java.management/sun.management=ALL-UNNAMED",
+                 "--add-opens jdk.management/com.ibm.lang.management.internal=ALL-UNNAMED",
                  "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
 }
 
